Adicionado recentimente sobre o meu github

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="attribution">
     Desafio do <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Codificado por <a href="https://github.com/JOAO11092005/JOAO11092005">Joao Paulo Neves</a>.
+    Codificado por <a href="https://github.com/JOAO11092005/gabriele-perfume" target="_blank">Joao Paulo Neves</a>.
   </div>
 </body>
 
