--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
     integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -33,7 +37,7 @@
     </section>
 
     <section class="informacao">
-      <h2>Perfume</h2>
+      <h2>P  E  R F U M E</h2>
 
       <h1>Gabrielle Essence Eau De Parfum</h1>
 
