Adicionei um a mensagen apos clicar no botao

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
           <p>$169.99</p>
         </div>
       </div>
-      <button><img src="./images/Captura_de_tela_2023-12-01_220924-removebg-preview.png" alt="carrinho"></i>Add to
+      <button onclick="exibirMensagem()"><img src="./images/Captura_de_tela_2023-12-01_220924-removebg-preview.png" alt="carrinho"></i>Add to
         Cart</button>
+        <div id="mensagem">Sua compra foi adicionado ao seu carrinho Finalize o seu pedido 🛒</div>
     </section>
   </main>
 
@@ -62,6 +63,12 @@
     Desafio do <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Codificado por <a href="https://github.com/JOAO11092005/gabriele-perfume" target="_blank">Joao Paulo Neves.</a>
   </div>
+  
+  
+
+  <script src="./index.js">
+
+  </script>
 </body>
 
 </html>
